--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
     <div class="passport-body">
         <div class="passport-title">Alliance</div>
         <div class="passport-image-container">
-            <img src="https://pbs.twimg.com/profile_images/1486745982532526086/41Kqg8Dr_400x400.png"
-                class="passport-avatar" />
+            <img class="passport-avatar" />
         </div>
         <div class="passport-subtitle">DAO Passport</div>
         <div class="passport-role" />
