--- a/index.html
+++ b/index.html
@@ -1,80 +1,74 @@
-<html>
+<style>
+    .container {
+        background: black;
+        color: white;
+        font-family: sans-serif;
+        text-transform: uppercase;
+    }
 
-<head>
-    <style>
-        html {
-            background: black;
-            color: white;
-            font-family: sans-serif;
-            text-transform: uppercase;
-        }
+    .passport-body {
+        width: 267px;
+        height: 424px;
 
-        .passport-body {
-            width: 267px;
-            height: 424px;
+        background: linear-gradient(196.04deg,
+                #1b1714 6.15%,
+                rgba(28, 24, 21, 0) 98.14%);
+        border: 1px solid rgba(255, 255, 255, 0.34);
+        box-sizing: border-box;
+        border-radius: 32px;
+        padding: 15px;
+    }
 
-            background: linear-gradient(196.04deg,
-                    #1b1714 6.15%,
-                    rgba(28, 24, 21, 0) 98.14%);
-            border: 1px solid rgba(255, 255, 255, 0.34);
-            box-sizing: border-box;
-            border-radius: 32px;
-            padding: 15px;
-        }
+    .passport-title {
+        font-size: 24px;
+        padding-left: 30px;
+        padding-top: 10px;
+        padding-bottom: 15px;
+    }
 
-        .passport-title {
-            font-size: 24px;
-            padding-left: 30px;
-            padding-top: 10px;
-            padding-bottom: 15px;
-        }
+    .passport-image-container {
+        width: 100%;
+    }
 
-        .passport-image-container {
-            width: 100%;
-        }
+    .passport-avatar {
+        width: 100%;
+        object-fit: cover;
+    }
 
-        .passport-avatar {
-            width: 100%;
-            object-fit: cover;
-        }
+    .passport-subtitle {
+        font-size: 16px;
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
 
-        .passport-subtitle {
-            font-size: 16px;
-            padding-top: 15px;
-            padding-bottom: 15px;
-        }
+    .passport-role {
+        font-size: 16px;
+    }
+</style>
 
-        .passport-role {
-            font-size: 16px;
-        }
-    </style>
-    <script>
-        const queryString = window.location.search;
-        const urlParams = new URLSearchParams(queryString);
-
-        const role = urlParams.get("role");
-        const roleSection = document.querySelector(".passport-role");
-        roleSection.innerText = role;
-
-        const avatar = urlParams.get("avatar");
-        const avatarSection = document.querySelector(".passport-avatar");
-        avatarSection.src =
-            avatar ||
-            "";
-
-    </script>
-</head>
-
-<body>
+<div class="container">
     <div class="passport-body">
         <div class="passport-title">Alliance</div>
         <div class="passport-image-container">
-            <img src="https://pbs.twimg.com/profile_images/1486745982532526086/41Kqg8Dr_400x400.png"
-                class="passport-avatar" />
+            <img class="passport-avatar" />
         </div>
         <div class="passport-subtitle">DAO Passport</div>
         <div class="passport-role" />
     </div>
-</body>
+</div>
 
-</html>
+<script>
+    const queryString = window.location.search;
+    const urlParams = new URLSearchParams(queryString);
+
+    const role = urlParams.get("role");
+    const roleSection = document.querySelector(".passport-role");
+    roleSection.innerText = role;
+
+    const avatar = urlParams.get("avatar");
+    const avatarSection = document.querySelector(".passport-avatar");
+    avatarSection.src =
+        avatar ||
+        "";
+
+</script>
