--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
         color: white;
         font-family: sans-serif;
         text-transform: uppercase;
+        width: 508px;
+        height: 500px;
+        position: relative;
+
     }
 
     .passport-body {
         width: 267px;
         height: 424px;
+        position: absolute;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: auto;
+        margin-bottom: auto;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
 
         background: linear-gradient(196.04deg,
                 #1b1714 6.15%,
