--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <style>
+    body {
+        margin: 0px;
+    }
+
     .container {
-        background: black;
+        background: #0B0C19;
         color: white;
         font-family: sans-serif;
         text-transform: uppercase;
@@ -22,6 +26,8 @@
         right: 0;
         top: 0;
         bottom: 0;
+        box-shadow: 0px 0px 102px 0px rgba(255, 255, 255, 0.41);
+
 
         background: linear-gradient(196.04deg,
                 #1b1714 6.15%,
@@ -41,6 +47,7 @@
 
     .passport-image-container {
         width: 100%;
+        border: 1px solid rgba(255, 255, 255, 0.54);
     }
 
     .passport-avatar {
