--- a/index.html
+++ b/index.html
@@ -87,8 +87,6 @@
 
     const avatar = urlParams.get("avatar");
     const avatarSection = document.querySelector(".passport-avatar");
-    avatarSection.src =
-        avatar ||
-        "https://i.imgur.com/ipj0mDM.png";
+    avatarSection.src = avatar ? atob(avatar) : "https://i.imgur.com/ipj0mDM.png";
 
 </script>
